--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -43,15 +43,15 @@
 }
 
 .hero-content h1 {
-    font-family: 'Dancing Script', cursive;
-    font-weight: 600;
+    font-family: 'Parisienne', cursive;
+    font-weight: 400;
     font-size: 7rem;
     text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.7);
     color: #000000;
 }
 
 .hero-content h2 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Parisienne', cursive;
     text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
     color: #000000;
 }
