--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -51,7 +51,7 @@
 }
 
 .hero-content h2 {
-    font-family: 'Parisienne', cursive;
+    font-family: 'Montserrat', sans-serif;
     text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
     color: #000000;
 }
